# bimmlite

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py  middleware.py  models.py  schemas.py
backend/app/api/routes/: bridge.py  health.py  logs.py  ops.py  phase1.py
backend/app/core/: config.py  db.py  logging.py  trace.py
backend/app/services/: bridge.py  dtc_catalog.py  phase1.py  telemetry.py
backend/bimmlite_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_bridge_manager.py  test_dtc_catalog.py  test_health.py
bridge/: Dockerfile  go.mod  go.sum  launcher.go  main.go
bridge/internal/transport/: auto.go  bmw_ecu_database.go  broadcast_socket_unix.go  broadcast_socket_windows.go  discovery.go  doip.go  hsfz.go  payload_helpers.go  payload_helpers_test.go  transport.go  types.go  utils.go
docs/: MASTER_DOC.md  shparqalka.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts
scripts/: README.md  deploy.sh  update.ps1
scripts/systemd/: bimmlite-backend.service
scripts/windows/: Диагностика.bat  Подключение-по-IP.bat
shared/: README.md  package.json  protocol.schema.json  tsconfig.json
shared/src/: protocol.ts
